[tool.poetry]
name = "simple-mcp"
version = "0.1.0"
description = ""
authors = ["songtov <songchiho777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mcp = {extras = ["cli"], version = "^1.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
